[imp] wssend and wsimport
- moving class into magento default lib
- polish

--- a/src/app/design/adminhtml/default/default/template/mailup/mailupsync/confirm.phtml
+++ b/src/app/design/adminhtml/default/default/template/mailup/mailupsync/confirm.phtml
@@ -8,7 +8,7 @@ if(empty($storeId)) {
 }
 
 //ottengo l'elenco delle liste e dei gruppi da mailup
-$wsImport = new MailUpWsImport($storeId);
+$wsImport = new Mailup_MailUpWsImport($storeId);
 
 $customersFiltered = $wsImport->getCustomersFiltered($this, $storeId);
 
