[dev] comment unused parts
- review for Magento Marketplace

--- a/src/app/design/adminhtml/default/default/template/mailup/mailupsync/filter.phtml
+++ b/src/app/design/adminhtml/default/default/template/mailup/mailupsync/filter.phtml
@@ -484,6 +484,10 @@ if ($accessKey === false || strlen(Mage::getStoreConfig('mailup_newsletter/mailu
     </table>
     </fieldset>
 
+    <?php
+    // GM review marketplace
+    // Used for local test
+    // TODO: remove ?>
     <!--<a href="<?php echo $this->getUrl('*/*/testCron')?>">TEST CRON</a>
     <a href="<?php echo $this->getUrl('*/*/testFields')?>">TEST GETFIELDS</a>-->
 </div>
